--- a/deck/templates/deck/deck_filter.html
+++ b/deck/templates/deck/deck_filter.html
@@ -56,19 +56,10 @@
                                     <div class="float-right">
                                         <a class="btn btn-outline-dark " href="{% url 'question_card_list' deck.pk %}">問題</a>
                                         <a class="btn btn-outline-dark " href="{% url 'deck_update' deck.pk %}">編集</a>
+                                        <a class="btn btn-outline-dark " href="{% url 'deck_delete' deck.pk %}">削除</a>
                                     </div>
                                 </div>
                             </div>
-                            {% if False %}
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="float-right">
-                                        <a class="btn btn-outline-dark " href="{% url 'deck_update' deck.pk %}">編集</a>
-                                        <a class="btn btn-outline-dark " href="{% url 'delete' deck.pk %}">削除</a>
-                                    </div>
-                                </div>
-                            </div>
-                            {% endif %}
                         </li>
                     {% empty %}
                         <li class="list-group-item">
