--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,4 +1,34 @@
 {% extends "_base.html" %}
 {% block content %}
     {% load crispy_forms_tags %}
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                {% for member in members %}
+                    {# 冒頭はforloop.counter0 #}
+                    {% if forloop.counter0|divisibleby:3 %}
+                    <!-- table 1つにつき3件 -->
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>name</th>
+                                <th>age</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                    {% endif %}
+                            <tr>
+                                <td>{{member.name}}</td>
+                                <td>{{member.age}}</td>
+                            </tr>
+                    {# 末尾はforloop.counter #}
+                    {% if forloop.counter|divisibleby:3 %}
+                        </tbody>
+                    </table>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    
 {% endblock %}
