--- a/askquestion/templates/askquestion/ask_question.html
+++ b/askquestion/templates/askquestion/ask_question.html
@@ -12,8 +12,8 @@
         </div>
         <div class="row">
             <div v-for="(panel, index) in panels" class="col-1" @click="open(index)">
-                <div class="embed-responsive embed-responsive-1by1 border d-flex align-items-center justify-content-center display-4" style="cursor: pointer;">
-                    <span v-if="panel.isOpen">[[panel.chara]]</span>
+                <div class="embed-responsive embed-responsive-1by1 border d-flex align-items-center justify-content-center display-4" :class="[panel.isOpen? 'alert alert-light' : 'alert alert-dark']" style="cursor: pointer;">
+                    <span class="text-dark" v-if="panel.isOpen">[[panel.chara]]</span>
                     <span v-else>[[index + 1]]</span>
                 </div>
             </div>
