--- a/questioncard/templates/questioncard/questioncard_filter.html
+++ b/questioncard/templates/questioncard/questioncard_filter.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mt-3">
             <div class="col-12">
                 <ul v-if="questionCardList.length" class="list-group">
                     <question-card-component v-for="(questionCard, index) in questionCardList"
@@ -74,7 +74,14 @@
                 <li class="list-group-item question_card">
                     {# 必要な項目を追加してください #}
                     <div class="row ">
-                        <div class="col-11">
+                        <div class="col-1">
+                            <div class="row">
+                                <div class="col">
+                                    [[number + 1]]
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-10">
                             <div class="row">
                                 <div class="col-5 col-sm-3">
                                     <p>問題文</p>
@@ -102,12 +109,12 @@
                         </div>
                         <div class="col-1">
                             <div class="row">
-                                <div class="float-right">
+                                <div class="col float-right">
                                     <a class="btn btn-outline-dark" :class="{'disabled' : isFirst}" href="#" @click.prevent.stop="up">↑</a>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="float-right">
+                                <div class="col float-right">
                                     <a class="btn btn-outline-dark" :class="{'disabled' : isLast}" href="#" @click.prevent.stop="down">↓</a>
                                 </div>
                             </div>
