--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>サンプルアプリ</title>
+    <title>問題文推理クイズジェネレーター</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet"
@@ -19,7 +19,7 @@
 
 <body>
 <nav class="navbar navbar-expand-md navbar-light bg-light ">
-    <a class="navbar-brand" href="{% url 'index' %}">サンプルアプリ</a>
+    <a class="navbar-brand" href="{% url 'index' %}">問題文推理クイズジェネレーター</a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navber" aria-controls="Navber"
             aria-expanded="false"
             aria-label="ナビゲーションの切替">
