--- a/askquestion/templates/askquestion/ask_question.html
+++ b/askquestion/templates/askquestion/ask_question.html
@@ -12,9 +12,11 @@
         </div>
         <div style="height:1400px">
             <div class="row">
+                <div class="col"></div>
                 <div class="col text-center display-4">
                     <span>[[countClosePanels()]]/[[panels.length]]</span>
                 </div>
+                <div class="col d-flex align-items-center"><img style="height: 48px; cursor: pointer;" src="{% static "icons/lightbulb.svg" %}" @click="openAll()"></img></div>
             </div>
             <div class="row mt-3">
                 <div v-for="(panel, index) in panels" class="col-1" @click="open(index)">
@@ -69,6 +71,9 @@
             methods: {
                 open: function(index) {
                     this.panels[index].isOpen = true;
+                },
+                openAll: function() {
+                    this.panels.forEach((element) => element.isOpen = true);
                 },
                 countClosePanels() {
                     return this.panels.filter(panel=>!panel.isOpen).length;
