--- a/app/templates/allauth/socialaccount/login.html
+++ b/app/templates/allauth/socialaccount/login.html
@@ -1,5 +1,5 @@
+{% extends "_base.html" %}
 {% load i18n %}
-
 {% block content %}
 {% if process == "connect" %}
 <h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
