--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% load socialaccount %}
 {% block content %}
     <div class="container">
         <div class="row">
@@ -7,7 +8,7 @@
                     {% if user.is_authenticated %}
                         <a class="btn btn-outline-dark" href="{% url 'deck_list' %}">デッキ一覧</a>
                     {% else %}
-                        <a class="btn btn-outline-dark" href="{% url 'users:login' %}">ログイン</a>
+                        <a class="btn btn-outline-dark" href="{% provider_login_url 'google' %}">ログイン</a>
                     {% endif %}
                 </div>
             </div>
