--- a/askquestion/templates/askquestion/ask_question.html
+++ b/askquestion/templates/askquestion/ask_question.html
@@ -19,7 +19,7 @@
                 <div class="col d-flex align-items-center"><img style="height: 48px; cursor: pointer;" src="{% static "icons/lightbulb.svg" %}" @click="openAll()"></img></div>
             </div>
             <div class="row mt-3">
-                <div v-for="(panel, index) in panels" class="col-3 col-sm-2 col-md-1" @click="open(index)">
+                <div v-for="(panel, index) in panels" class="col-3 col-sm-2 col-lg-1" @click="open(index)">
                     <div class="embed-responsive embed-responsive-1by1 border d-flex align-items-center justify-content-center display-4" :class="[panel.isOpen? 'alert alert-light' : 'alert alert-dark']" style="cursor: pointer;">
                         <span class="text-dark" v-if="panel.isOpen">[[panel.chara]]</span>
                         <span v-else>[[index + 1]]</span>
@@ -27,31 +27,38 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col text-center">
-                <span>↓ドラッグで正解表示(解答者に見られないように注意！！)</span>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col text-center">
-                <span style="background-color: black; color: black;">{{ questioncard.correct_answer }}</span>
-            </div>
-        </div>
         <div class="row justify-content-around">
+            <div class="col col-md-8">
+                <div class="accordion" id="accordion-4">
+                    <div class="card">
+                        <div class="card-header" id="header-4a">
+                          <button class="btn btn-link stretched-link" type="button"
+                              data-toggle="collapse" data-target="#card-4a"
+                              aria-expanded="true" aria-controls="card-4a">
+                              正解表示(解答者に見られないように注意！！)
+                          </button>
+                        </div>
+                        <div id="card-4a" class="collapse"
+                            aria-labelledby="header-4a" data-parent="#accordion-4">
+                          <div class="card-body">
+                            {{ questioncard.correct_answer }}
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3 justify-content-around">
             <div class="col-1"><a {% if prev_url != None %} href="{{ prev_url }}" {% else %} href="#" style="visibility: hidden;" {% endif %}><img style="height: 48px" src="{% static "icons/caret-left-square.svg" %}"></img></a></div>
             <div class="col-1"><a {% if next_url != None %} href="{{ next_url }}" {% else %} href="#" style="visibility: hidden;" {% endif %}><img style="height: 48px" src="{% static "icons/caret-right-square.svg" %}"></img></a></div>
         </div>
-        {% for url in urls %}
-        {% if forloop.counter0|divisibleby:10 %}
         <div class="row mt-3 justify-content-center">
-            <div class="col-12 col-md-8 d-flex">
-        {% endif %}
-                <div class="p-1" style="width: 10%;"><a class="btn {% if question_number == forloop.counter %} btn-secondary {% else %} btn-outline-dark {% endif %} btn-block" href="{{url}}">{{forloop.counter}}</a></div>
-        {% if forloop.counter|divisibleby:10 or forloop.last %}
+            <div class="col-12 col-md-8 d-flex flex-wrap">
+                {% for url in urls %}
+                    <div class="p-1 mb-3 ask_question_jump_question_button"><a class="btn {% if question_number == forloop.counter %} btn-secondary {% else %} btn-outline-dark {% endif %} btn-block" href="{{url}}">{{forloop.counter}}</a></div>
+                {% endfor %}
             </div>
         </div>
-        {% endif %}
-        {% endfor %}
     </div>
     <script>
         const questionText = "{{ questioncard.question_text }}";
