--- a/app/templates/allauth/socialaccount/login.html
+++ b/app/templates/allauth/socialaccount/login.html
@@ -1,18 +1,10 @@
 {% extends "_base.html" %}
+{% load static %}
 {% load i18n %}
 {% block content %}
-{% if process == "connect" %}
-<h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
 
-<p>{% blocktrans with provider.name as provider %}You are about to connect a new third party account from {{ provider }}.{% endblocktrans %}</p>
-{% else %}
-<h1>{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h1>
-
-<p>{% blocktrans with provider.name as provider %}You are about to sign in using a third party account from {{ provider }}.{% endblocktrans %}</p>
-{% endif %}
-
-<form method="post">
+<form class="mt-3" method="post">
   {% csrf_token %}
-  <button type="submit">{% trans "Continue" %}</button>
+  <input type="image" src="{% static "icons/btn_google_signin_dark_normal_web.png" %}" />
 </form>
 {% endblock %}
