--- a/askquestion/templates/askquestion/ask_question.html
+++ b/askquestion/templates/askquestion/ask_question.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% load socialaccount %}
 {% block content %}
     {% load static %}
     {% load crispy_forms_tags %}
@@ -6,7 +7,11 @@
         <div class="row">
             <div class="col-12">
                 <div class="float-right mt-1">
-                    <a class="btn btn-outline-dark" href="{% url 'deck_list' %}">戻る</a>
+                    {% if user.is_authenticated %}
+                        <a class="btn btn-outline-dark {% if user != owner%}invisible{% endif %}" href="{% url 'deck_list' %}">戻る</a>
+                    {% else %}
+                        <a class="btn btn-outline-dark" href="{% provider_login_url 'google' %}">ログイン</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
