--- a/app/static/app/css/app.css
+++ b/app/static/app/css/app.css
@@ -22,3 +22,36 @@
     font-weight: 300;
     line-height: 1.2;
 }}
+
+.hidden {
+    display: none;
+}
+
+.message {
+    padding: 2px;
+    border-radius: 8px;
+    background: #ddd;
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+}
+
+.popup-message {
+    animation: popup 3s forwards;
+}
+  
+@keyframes popup {
+    0% {
+        transform: translateY(15%);
+        opacity: 0;
+    }
+    10%, 90% {
+        transform: none;
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(15%);
+        opacity: 0;
+        pointer-events: none;
+    }
+}
