--- a/deck/templates/deck/deck_filter.html
+++ b/deck/templates/deck/deck_filter.html
@@ -30,7 +30,7 @@
                                     <p>{{ deck.deck_name|default_if_none:"未入力" }}</p>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mb-3">
                                 <div class="col">
                                     {% if deck.in_deck.all|length > 0 %}
                                     <div class="d-flex justify-content-end">
@@ -38,8 +38,10 @@
                                             <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="問題文推理クイズのデッキを公開しました。" data-url="{{ request.scheme }}://{{ request.get_host }}{% url 'ask_question' deck.pk 1 %}" data-show-count="false" data-size="small">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                                         </div>
                                         <div class="fb-share-button" style="margin-top: 6px;" data-href="{{ request.scheme }}://{{ request.get_host }}{% url 'ask_question' deck.pk 1 %}" data-layout="button"></div>
-                                        <img class="copy_url" style="height: 25px; margin-top: 6px; cursor: pointer;" src="{% static "icons/clipboard-check.svg" %}" data-url="{{ request.scheme }}://{{ request.get_host }}{% url 'ask_question' deck.pk 1 %}"></img>
-                                        <div class="d-inline"><span class="message hidden">copied!</span></div>
+                                        <div class="d-inline">
+                                            <img class="copy_url" style="height: 25px; margin-top: 6px; cursor: pointer;" src="{% static "icons/clipboard-check.svg" %}" data-url="{{ request.scheme }}://{{ request.get_host }}{% url 'ask_question' deck.pk 1 %}"></img>
+                                            <span class="message hidden" style="bottom: 30px; right:0px;">copied!</span>
+                                        </div>
                                     </div>
                                     {% endif %}
                                 </div>
